Feature/fcs 471/search for applications by assigned technical reviewer (#208)
added new filter for assigned technical reviewer to the work-area