@@ -21,9 +21,12 @@ import static uk.co.nstauthority.fieldconsents.application.workareapriority.Appl
 import static uk.co.nstauthority.fieldconsents.application.workareapriority.ApplicationWorkAreaPriorityReason.CASE_OFFICER_TAKE_OWNERSHIP;
 import static uk.co.nstauthority.fieldconsents.teams.permissionmanagement.regulator.RegulatorTeamRole.CASE_OFFICER;
 
+import java.util.Collection;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -42,12 +45,12 @@ import uk.co.nstauthority.fieldconsents.energyportal.WebUserAccountId;
 import uk.co.nstauthority.fieldconsents.energyportal.user.EnergyPortalUserService;
 import uk.co.nstauthority.fieldconsents.teams.Team;
 import uk.co.nstauthority.fieldconsents.teams.TeamMember;
-import uk.co.nstauthority.fieldconsents.teams.TeamMemberService;
 import uk.co.nstauthority.fieldconsents.teams.TeamMemberTestUtil;
 import uk.co.nstauthority.fieldconsents.teams.TeamMemberViewService;
 import uk.co.nstauthority.fieldconsents.teams.TeamService;
 import uk.co.nstauthority.fieldconsents.teams.TeamTestUtil;
 import uk.co.nstauthority.fieldconsents.teams.TeamType;
+import uk.co.nstauthority.fieldconsents.teams.permissionmanagement.regulator.RegulatorTeamRole;
 import uk.co.nstauthority.fieldconsents.teams.permissionmanagement.regulator.RegulatorTeamService;
 
 @ExtendWith(MockitoExtension.class)
@@ -76,6 +79,10 @@ class CaseAssignmentServiceTest {
       .withRole(CASE_OFFICER)
       .build();
 
+  private static final List<Long> ASSIGNED_CASE_OFFICERS_WUA_IDS = List.of(CASE_OFFICER_1.wuaId().id(), CASE_OFFICER_2.wuaId().id());
+
+  private static final List<WebUserAccountId> TEAM_CASE_OFFICER_WUA_IDS = List.of(CASE_OFFICER_1.wuaId(), CASE_OFFICER_2.wuaId());
+
   @Mock
   private ApplicationVersionRepository applicationVersionRepository;
 
@@ -89,9 +96,6 @@ class CaseAssignmentServiceTest {
   private ApplicationWorkAreaPriorityService applicationWorkAreaPriorityService;
 
   @Mock
-  private TeamMemberService teamMemberService;
-
-  @Mock
   private EnergyPortalUserService energyPortalUserService;
   
   @Mock
@@ -102,9 +106,14 @@ class CaseAssignmentServiceTest {
 
   private ApplicationVersion applicationVersion;
 
+  private Collection<WebUserAccountId> allCaseOfficersWuaIds;
+
   @BeforeEach
   void setUp() {
     applicationVersion = ApplicationTestUtil.getSubmittedApplicationVersionWithType(ApplicationType.PRODUCTION);
+    allCaseOfficersWuaIds = new HashSet<>();
+    allCaseOfficersWuaIds.add(CASE_OFFICER_1.wuaId());
+    allCaseOfficersWuaIds.add(CASE_OFFICER_2.wuaId());
   }
 
   @Test
@@ -229,32 +238,12 @@ class CaseAssignmentServiceTest {
   }
 
   @Test
-  void getCurrentCaseOfficers_whenUserIsNotRegulator() {
-    when(teamService.getTeamsByType(TeamType.REGULATOR)).thenReturn(Collections.emptyList());
-
-    List<Long> currentCaseOfficersWuaIds = List.of(CASE_OFFICER_1.wuaId().id(), CASE_OFFICER_2.wuaId().id());
+  void getCurrentCaseOfficers_whenUserNoRegulatorInCaseOfficerRole() {
+    when(teamService.getWuaIdsOfTeamMembersWithRoles(TeamType.REGULATOR, Set.of(RegulatorTeamRole.CASE_OFFICER)))
+        .thenReturn(Collections.emptyList());
     when(applicationVersionRepository
-        .findAllCaseOfficerWuaIdsByApplicationVersionStatus(SUBMITTED)).thenReturn(currentCaseOfficersWuaIds);
-
-    when(energyPortalUserService.findByWuaIds(List.of(CASE_OFFICER_1.wuaId(), CASE_OFFICER_2.wuaId())))
-        .thenReturn(List.of(ENERGY_PORTAL_USER_1, ENERGY_PORTAL_USER_2));
-
-    assertThat(caseAssignmentService.getCurrentCaseOfficers())
-        .containsExactly(
-            ENERGY_PORTAL_USER_1,
-            ENERGY_PORTAL_USER_2
-        );
-  }
-
-  @Test
-  void getCurrentCaseOfficers_withNoCurrentCaseOfficersAvailable() {
-    when(teamService.getTeamsByType(TeamType.REGULATOR)).thenReturn(List.of(REGULATOR_TEAM));
-    when(teamMemberService.getTeamMembers(REGULATOR_TEAM)).thenReturn(Collections.emptyList());
-    List<Long> currentCaseOfficersWuaIds = List.of(CASE_OFFICER_1.wuaId().id(), CASE_OFFICER_2.wuaId().id());
-    when(applicationVersionRepository
-        .findAllCaseOfficerWuaIdsByApplicationVersionStatus(SUBMITTED)).thenReturn(currentCaseOfficersWuaIds);
-
-    when(energyPortalUserService.findByWuaIds(List.of(CASE_OFFICER_1.wuaId(), CASE_OFFICER_2.wuaId())))
+        .findAllCaseOfficerWuaIdsByApplicationVersionStatus(SUBMITTED)).thenReturn(ASSIGNED_CASE_OFFICERS_WUA_IDS);
+    when(energyPortalUserService.findByWuaIds(allCaseOfficersWuaIds))
         .thenReturn(List.of(ENERGY_PORTAL_USER_1, ENERGY_PORTAL_USER_2));
 
     assertThat(caseAssignmentService.getCurrentCaseOfficers())
@@ -266,27 +255,38 @@ class CaseAssignmentServiceTest {
 
   @Test
   void getCurrentCaseOfficers_withNoCurrentNorPreviouslyAssignedCaseOfficersAvailable() {
-    when(teamService.getTeamsByType(TeamType.REGULATOR)).thenReturn(List.of(REGULATOR_TEAM));
-    when(teamMemberService.getTeamMembers(REGULATOR_TEAM)).thenReturn(Collections.emptyList());
+    when(teamService.getWuaIdsOfTeamMembersWithRoles(TeamType.REGULATOR, Set.of(RegulatorTeamRole.CASE_OFFICER)))
+        .thenReturn(Collections.emptyList());
     when(applicationVersionRepository
         .findAllCaseOfficerWuaIdsByApplicationVersionStatus(SUBMITTED))
-        .thenReturn(Collections.emptyList());
-
-    when(energyPortalUserService.findByWuaIds(Collections.emptyList()))
         .thenReturn(Collections.emptyList());
 
     assertThat(caseAssignmentService.getCurrentCaseOfficers()).isEmpty();
   }
 
   @Test
-  void getCurrentCaseOfficers_withCurrentCaseOfficersOnly() {
-    when(teamService.getTeamsByType(TeamType.REGULATOR)).thenReturn(List.of(REGULATOR_TEAM));
-    when(teamMemberService.getTeamMembers(REGULATOR_TEAM)).thenReturn(List.of(CASE_OFFICER_1, CASE_OFFICER_2));
-    List<Long> currentCaseOfficersWuaIds = List.of(CASE_OFFICER_1.wuaId().id(), CASE_OFFICER_2.wuaId().id());
+  void getCurrentCaseOfficers_withCurrentCaseOfficersSameAsAssigned() {
+    when(teamService.getWuaIdsOfTeamMembersWithRoles(TeamType.REGULATOR, Set.of(RegulatorTeamRole.CASE_OFFICER)))
+        .thenReturn(TEAM_CASE_OFFICER_WUA_IDS);
     when(applicationVersionRepository
-        .findAllCaseOfficerWuaIdsByApplicationVersionStatus(SUBMITTED)).thenReturn(currentCaseOfficersWuaIds);
+        .findAllCaseOfficerWuaIdsByApplicationVersionStatus(SUBMITTED)).thenReturn(ASSIGNED_CASE_OFFICERS_WUA_IDS);
+    when(energyPortalUserService.findByWuaIds(allCaseOfficersWuaIds))
+        .thenReturn(List.of(ENERGY_PORTAL_USER_1, ENERGY_PORTAL_USER_2));
 
-    when(energyPortalUserService.findByWuaIds(List.of(CASE_OFFICER_1.wuaId(), CASE_OFFICER_2.wuaId())))
+    assertThat(caseAssignmentService.getCurrentCaseOfficers())
+        .containsExactly(
+            ENERGY_PORTAL_USER_1,
+            ENERGY_PORTAL_USER_2
+        );
+  }
+
+  @Test
+  void getCurrentCaseOfficers_withCurrentCaseOfficersButNoneAssigned() {
+    when(teamService.getWuaIdsOfTeamMembersWithRoles(TeamType.REGULATOR, Set.of(RegulatorTeamRole.CASE_OFFICER)))
+        .thenReturn(TEAM_CASE_OFFICER_WUA_IDS);
+    when(applicationVersionRepository
+        .findAllCaseOfficerWuaIdsByApplicationVersionStatus(SUBMITTED)).thenReturn(Collections.emptyList());
+    when(energyPortalUserService.findByWuaIds(allCaseOfficersWuaIds))
         .thenReturn(List.of(ENERGY_PORTAL_USER_1, ENERGY_PORTAL_USER_2));
 
     assertThat(caseAssignmentService.getCurrentCaseOfficers())
@@ -298,12 +298,13 @@ class CaseAssignmentServiceTest {
 
   @Test
   void getCurrentCaseOfficers_withPreviouslyAssignedCaseOfficers() {
-    when(teamService.getTeamsByType(TeamType.REGULATOR)).thenReturn(List.of(REGULATOR_TEAM));
-    List<Long> previousCaseOfficersWuaIds = List.of(CASE_OFFICER_3.wuaId().id());
+    when(teamService.getWuaIdsOfTeamMembersWithRoles(TeamType.REGULATOR, Set.of(RegulatorTeamRole.CASE_OFFICER)))
+        .thenReturn(TEAM_CASE_OFFICER_WUA_IDS);
     when(applicationVersionRepository
-        .findAllCaseOfficerWuaIdsByApplicationVersionStatus(SUBMITTED)).thenReturn(previousCaseOfficersWuaIds);
-    when(teamMemberService.getTeamMembers(REGULATOR_TEAM)).thenReturn(List.of(CASE_OFFICER_1, CASE_OFFICER_2));
-    when(energyPortalUserService.findByWuaIds(List.of(CASE_OFFICER_1.wuaId(), CASE_OFFICER_2.wuaId(), CASE_OFFICER_3.wuaId())))
+        .findAllCaseOfficerWuaIdsByApplicationVersionStatus(SUBMITTED)).thenReturn(List.of(CASE_OFFICER_3.wuaId().id()));
+
+    allCaseOfficersWuaIds.add(CASE_OFFICER_3.wuaId());
+    when(energyPortalUserService.findByWuaIds(allCaseOfficersWuaIds))
         .thenReturn(List.of(ENERGY_PORTAL_USER_1, ENERGY_PORTAL_USER_2, ENERGY_PORTAL_USER_3));
 
     assertThat(caseAssignmentService.getCurrentCaseOfficers())
